--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "express": "^4.18.2",
+    "push.js": "^1.0.12",
     "socket.io": "^4.7.2"
   }
 }
